1. Разделил функции от контроллера 2. Реализовал crud 3. Сделал отзывы в отдельном пункте меню и к каждому изображению.

--- a/engine/public/css/style.css
+++ b/engine/public/css/style.css
@@ -8,10 +8,19 @@ body {
 }
 
 .photo{
+
 	position: relative;
 	display: inline-block;
+
 }
 
+.item .photo{
+	margin-right: 20px;
+	float: left;
+}
+.item > *:not(.photo){
+	margin-bottom: 20px;
+}
 a:hover img {
 	border: 3px solid #034F80;
 }
